# AMBiT

./: .gitignore  AMBiT.m  CI_wavefunk.py  CMakeLists.txt  CONTRIBUTING.md  CustomBasis.txt  Hyperfine.cpp  Hyperfine.h  INSTALL.md  Include.h  Makefile  README.md  SConstruct  Sm15+.input  TimeDependentSpinorOperator.h  __init__.py  ambit.cpp  ambit_dependencies.ini  ambit_modules.ini  config.txt  config.yml  config_template.ini  config_template.yml  doxyfile  getGitInfo.sh  make.dependencies  make.instructions  make.machine  mendel.tab  read_basis.py  read_hamiltonian.py  template.input  versions.txt
Basis/: BSplineBasis.cpp  BSplineBasis.h  BSplineBasis.test.cpp  BSplineCore.cpp  BSplineCore.h  BSplineGrid.cpp  BSplineGrid.h  BasisGenerator.cpp  BasisGenerator.h  BasisGenerator.test.cpp  CMakeLists.txt  CustomBasis.cpp  CustomBasis.h  DiscreteExcitedStates.cpp  DiscreteExcitedStates.h  ExcitedStates.cpp  ExcitedStates.h  HFExcitedStates.cpp  HFExcitedStates.h  HartreeFockBasis.cpp  HartreeFockBasis.h  OrbitalManager.cpp  OrbitalManager.h  RSinStates.cpp  RSinStates.h  RStates.cpp  RStates.h  ReadBasis.cpp  ReadBasis.h  Spline.f  Spline.h  Splines.c  SubsetBasis.cpp  SubsetBasis.h  TimesRBasis.cpp  TimesRBasis.h  make.Basis
Configuration/: AngularData.cpp  AngularData.h  AngularData.test.cpp  CIIntegrals.cpp  CIIntegrals.h  CIIntegrals.test.cpp  CIIntegralsMBPT.cpp  CIIntegralsMBPT.h  CMakeLists.txt  ConfigFileGenerator.cpp  ConfigFileGenerator.h  ConfigGenerator.cpp  ConfigGenerator.h  ConfigGenerator.test.cpp  Configuration.cpp  Configuration.h  Eigenstates.cpp  Eigenstates.h  ElectronInfo.cpp  ElectronInfo.h  GFactor.h  HamiltonianMatrix.cpp  HamiltonianMatrix.h  HamiltonianMatrix.test.cpp  IndexedIterator.h  Level.cpp  Level.h  Level.test.cpp  LevelMap.cpp  LevelMap.h  LevelVector.h  MPIHamiltonianMatrix.cpp  MPIHamiltonianMatrix.h  MPIMatrix.cpp  MPIMatrix.h  ManyBodyOperator.h  ManyBodyOperator.test.cpp  Matrix.cpp  Matrix.h  NonRelConfiguration.cpp  (+22 more)
ExternalField/: Breit.test.cpp  BreitHFDecorator.cpp  BreitHFDecorator.h  BreitZero.cpp  BreitZero.h  CMakeLists.txt  EJOperator.cpp  EJOperator.h  EJOperator.test.cpp  FieldShift.cpp  FieldShift.h  Hyperfine.cpp  Hyperfine.h  Hyperfine.test.cpp  KineticEnergy.h  LimitApplicabilityWrapper.h  LorentzInvarianceT2.cpp  LorentzInvarianceT2.h  MassShiftDecorator.cpp  MassShiftDecorator.h  MassShiftDecorator.test.cpp  NonRelativisticSMSOperator.cpp  NonRelativisticSMSOperator.h  NormalMassShiftDecorator.cpp  NormalMassShiftDecorator.h  RPAOperator.cpp  RPAOperator.h  RPAOrbital.cpp  RPAOrbital.h  RPASolver.cpp  RPASolver.h  RadiativePotential.cpp  RadiativePotential.h  RadiativePotential.test.cpp  RelativisticSMSOperator.cpp  RelativisticSMSOperator.h  SpecificMassShiftDecorator.cpp  SpecificMassShiftDecorator.h  TimeDependentSpinorOperator.h  TransitionIntegrals.cpp  (+9 more)
HartreeFock/: BoundStateIntegrator.cpp  BoundStateIntegrator.h  CMakeLists.txt  Configuration.h  ConfigurationParser.cpp  ConfigurationParser.h  ConfigurationParser.test.cpp  ContinuumBuilder.cpp  ContinuumBuilder.h  ContinuumState.cpp  ContinuumState.h  ContinuumWave.cpp  ContinuumWave.h  Core.cpp  Core.h  CoreGenerator.cpp  CoreGenerator.h  CoreGenerator.test.cpp  Core_BuildStates.cpp  Core_OpenShell.cpp  Core_Start.cpp  CoulombOperator.cpp  CoulombOperator.h  CoupledFunction.cpp  CoupledFunction.h  DiscreteState.cpp  DiscreteState.h  DiscreteStateIterator.h  ExchangeDecorator.cpp  ExchangeDecorator.h  GreensIntegrator.cpp  GreensIntegrator.h  GreensMethodODE.cpp  GreensMethodODE.h  GreensMethodOperator.cpp  GreensMethodOperator.h  HFOperator.cpp  HFOperator.h  HFOperator.test.cpp  HFOperatorBase.h  (+53 more)
MBPT/: BruecknerDecorator.cpp  BruecknerDecorator.h  BruecknerDecorator.test.cpp  BruecknerSigmaCalculator.cpp  BruecknerSigmaCalculator.h  CMakeLists.txt  CoreMBPTCalculator.cpp  CoreMBPTCalculator.h  CoreValenceIntegrals.cpp  CoreValenceIntegrals.h  CoreValenceIntegrals.test.cpp  MBPTCalculator.cpp  MBPTCalculator.h  OneElectronIntegrals.cpp  OneElectronIntegrals.h  OneElectronMBPT.cpp  OneElectronMBPT.h  Sigma3Calculator.cpp  Sigma3Calculator.h  SigmaPotential.cpp  SigmaPotential.h  SlaterIntegrals.cpp  SlaterIntegrals.h  TwoElectronCoulombOperator.cpp  TwoElectronCoulombOperator.h  ValenceCalculator.cpp  ValenceCalculator.h  ValenceMBPTCalculator.cpp  ValenceMBPTCalculator.h  make.MBPT
UnitTest/: AngularData.test.cpp  BSplineBasis.test.cpp  BasisGenerator.test.cpp  BruecknerDecorator.test.cpp  CMakeLists.txt  ConfigGenerator.test.cpp  CoreValenceIntegrals.test.cpp  HFOperator.test.cpp  HartreeFocker.test.cpp  LocalPotentialDecorator.test.cpp  ManyBodyOperator.test.cpp  MathConstant.test.cpp  MultirunOptions.test.cpp
Universal/: CMakeLists.txt  Constant.cpp  Constant.h  CoulombIntegrator.cpp  CoulombIntegrator.h  Davidson.c  Davidson.f  Eigensolver.cpp  Eigensolver.h  Enums.h  ExpLattice.cpp  ExpLattice.h  FornbergDifferentiator.cpp  FornbergDifferentiator.h  Function.cpp  Function.h  Include.cpp  Integrator.cpp  Integrator.h  Interpolator.cpp  Interpolator.h  Lattice.cpp  Lattice.h  MPIMatrix.h  MathConstant.cpp  MathConstant.h  MathConstant.test.cpp  Matrix.h  PhysicalConstant.cpp  PhysicalConstant.h  ScalapackMatrix.cpp  ScalapackMatrix.h  SmallMatrix.cpp  SmallMatrix.h  Solution.cpp  Solution.h  SpinorFunction.cpp  SpinorFunction.h  SpinorMatrixElement.h  SymMatrix.cpp  (+2 more)
src/: CMakeLists.txt  ambit.cpp  ambit.h
src/Atom/: Atom.cpp  Atom.h  Atom_Autoionization.cpp  Atom_Open.cpp  Atom_OtherCodes.cpp  CMakeLists.txt  HamiltonianTypes.h  MultirunOptions.h  make.Atom
src/Basis/: BasisGenerator.cpp  BasisGenerator.h  CMakeLists.txt  HartreeFockBasis.cpp  make.Basis
src/Configuration/: AngularData.cpp  AngularData.h  CMakeLists.txt  ConfigFileGenerator.h  ConfigGenerator.cpp  Eigenstates.cpp  Eigenstates.h  ElectronInfo.cpp  ElectronInfo.h  GFactor.h  HamiltonianID.cpp  HamiltonianID.h  HamiltonianMatrix.cpp  HamiltonianMatrix.h  IndexedIterator.h  Level.h  LevelMap.cpp  LevelMap.h  LevelVector.h  ManyBodyOperator.h  NonRelConfiguration.cpp  Projection.cpp  (+7 more)
(+134 files in other folders)
